[package]
name = "udp-socket"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Advanced udp socket."
repository = "https://github.com/ipfs-rust/udp-socket"
license = "MIT OR Apache-2.0"

[dependencies]
async-io = "1.3.1"
futures-lite = "1.11.3"
libc = "0.2.92"
socket2 = "0.4.0"

[dev-dependencies]
anyhow = "1.0.40"
async-global-executor = "2.0.2"
env_logger = "0.8.3"
log = "0.4.14"
